--- a/public/allstyle.css
+++ b/public/allstyle.css
@@ -1,179 +1,257 @@
-.btn{
-    border-radius: 23px!important;
-  }
-  .circle1{
-    height: 360px;
-    width:360px;
-    border-radius: 50%;
-    border: 30px solid #8484f340;
-    text-align: center !important;
+.btn {
+  border-radius: 23px !important;
+}
+
+.circle1 {
+  height: 360px;
+  width: 360px;
+  border-radius: 50%;
+  border: 30px solid #8484f340;
+  text-align: center !important;
   margin: auto;
-    margin-top: auto;
-    margin-bottom: auto;
+  margin-top: auto;
+  margin-bottom: auto;
   justify-content: center;
-  }
-  .circle2{
-    height: 300px;
-    width:300px;
-    border-radius: 50%;
-    border: 30px solid #0000ff40;
-  }
-  .circle3{
-    height: 240px;
-    width:240px;
-    border-radius: 50%;
-    border: 10px solid blue;
-    text-align: center !important;
-    margin: auto;
-      margin-top: auto;
-      margin-bottom: auto;
-    justify-content: center;
-  }
-  /* .profile-img{
+}
+
+.circle2 {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  border: 30px solid #0000ff40;
+}
+
+.circle3 {
+  height: 240px;
+  width: 240px;
+  border-radius: 50%;
+  border: 10px solid blue;
+  text-align: center !important;
+  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  justify-content: center;
+}
+.client-review-home-page{
+  background-color: rgb(211, 185, 164);
+}
+.client-review-card-home{
+  background-color: rgb(211, 185, 164) !important;
+  border: none !important;
+  outline: none !important;
+}
+.client-review-card-home .card-body{
+  border: none !important;
+  outline: none !important; 
+}
+.quote-green{
+  font-size: 80px !important;
+  color: green;
+
+}
+.client-review-img-home{
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  /* text-align: center !important; */
+}
+/* .profile-img{
     height: 90% !important;
     width:90% !important;
   } */
-  .input-find-job{
-    height: 38px;
-  }
-  .btn-find-job{
-    margin-top: -2px;
-    border-radius: 0px !important;
-  }
-  .find-job{
-    height: 12rem;
-    background-color: #c8e6f2;
+.input-find-job {
+  height: 38px;
+}
 
-  }
-  .btn-circle{
-    border-radius: 23px !important;
-  }
-  .profile-img{
-    height: 120px !important;
-    text-align: center;
-    margin: auto;
-  }
-  .video-sec{
-    /* height: 12rem; */
-    background-color: #c8e6f2;
+.btn-find-job {
+  margin-top: -2px;
+  border-radius: 0px !important;
+}
 
-  }
-  .player{
-    aspect-ratio: 16/9;
-    width: 100%;
-  }
-  footer{
-    background-color: #202051;
-  }
-  footer a{
-    color: white;
-    text-decoration: none;
-  }
-  footer h5{
-    color: white;
-  }
-  footer li{
-    list-style: none;
-  }
-  .fa{
-    font-size: 25px;
-  }
-  .company-background{
-    background-color: #c8e6f2;
-  }
-  .employee-card{
-    border-radius: 12px;
-    border: none;
-    height: 120px !important;
-    width: 130px !important;
-  }
-  .employee-card2{
-    border-radius: 12px;
-    border: none;
-    height: 80px !important;
-    width: 100px !important;
-  }
-  .img-slider{
-    text-align: center!important;
-  }
-  .img-slider:hover{
-background-color: #2a2acc;
-color: white;
-  }
-  .img-slider img{
-    border-radius: 50%;
-    height: 200px;
+.find-job {
+  height: 12rem;
+  background-color: #c8e6f2;
+
+}
+
+.btn-circle {
+  border-radius: 23px !important;
+}
+
+.profile-img {
+  height: 120px !important;
+  text-align: center;
+  margin: auto;
+}
+
+.video-sec {
+  /* height: 12rem; */
+  background-color: #c8e6f2;
+
+}
+
+.player {
+  aspect-ratio: 16/9;
+  width: 100%;
+}
+
+footer {
+  background-color: #202051;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer h5 {
+  color: white;
+}
+
+footer li {
+  list-style: none;
+}
+
+.fa {
+  font-size: 25px;
+}
+
+.company-background {
+  background-color: #c8e6f2;
+}
+
+.employee-card {
+  border-radius: 12px;
+  border: none;
+  height: 120px !important;
+  width: 130px !important;
+}
+
+.employee-card2 {
+  border-radius: 12px;
+  border: none;
+  height: 80px !important;
+  width: 100px !important;
+}
+
+.img-slider {
+  text-align: center !important;
+}
+
+.img-slider:hover {
+  background-color: #2a2acc;
+  color: white;
+}
+
+.img-slider img {
+  border-radius: 50%;
+  height: 200px;
   width: 200px;
-  text-align: center!important;
-  }
-  .slick-slide img{
-    display: initial!important;
-  }
-  @media (max-width: 768px) {
+  text-align: center !important;
+}
+
+.slick-slide img {
+  display: initial !important;
+}
+
+.client-head-sec {
+  height: 60vh;
+  background-image: url(/assets/images/bg2.jpg);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 60vh;
+  /* 
+  .filter: blur(2px); */
+}
+.fa-star{
+  color: #f76b17;
+  font-size: 20px;
+}
+.client-review-img{
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  text-align: center !important;
+}
+
+@media (max-width: 768px) {
+
   /* #video-sec{
     width:"300" !important;
     height:"225" !important;
   } */
-  .find-job{
+  .find-job {
     height: 18rem;
     background-color: #c8e6f2;
 
   }
+ .client-head-sec {
+max-height: 40vh;
   }
-  .nav-item{
-    text-decoration: none !important;
-  }
+}
 
-  .link-head{
-    text-decoration: none;
-   
-    cursor: pointer;
-  }
-  .logo-link{
-    text-decoration: none;
-    color: green;
-    font-size: 30px;
-    cursor: pointer;
-  }
-  form{
-    /* background-color: #202051; */
-    background-color: #c8e6f2;
-    margin: 50px;
-    padding: 50px;
-    border: 1px solid rgb(201, 198, 198);
-    border-radius: 14px;
-  }
- 
-  .btn-link i{
-    font-size: 33px;
-  }
-  .profile-background{
-    background-color: #dfdfdf;
-  }
-  .line{
-    border: 1px solid gray;
-    width: 70%;
-    height: 1px;
-    margin-top: 14px;
-  }
-  .line2{
-    border: 1px solid gray;
-    width: 58%;
-    height: 1px;
-    margin-top: 14px;
-  }
-  .line3{
-    border: 1px solid gray;
-    width: 78%;
-    height: 1px;
-    margin-top: 14px;
-  }
-  .line4{
-    border: 1px solid gray;
-    width: 67%;
-    height: 1px;
-    margin-top: 14px;
-  }
-  .fa-pencil-square-o{
-    padding-top: 5px;
-  }
+.nav-item {
+  text-decoration: none !important;
+}
+
+.link-head {
+  text-decoration: none;
+
+  cursor: pointer;
+}
+
+.logo-link {
+  text-decoration: none;
+  color: green;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+form {
+  /* background-color: #202051; */
+  background-color: #c8e6f2;
+  margin: 50px;
+  padding: 50px;
+  border: 1px solid rgb(201, 198, 198);
+  border-radius: 14px;
+}
+
+.btn-link i {
+  font-size: 33px;
+}
+
+.profile-background {
+  background-color: #dfdfdf;
+}
+
+.line {
+  border: 1px solid gray;
+  width: 70%;
+  height: 1px;
+  margin-top: 14px;
+}
+
+.line2 {
+  border: 1px solid gray;
+  width: 58%;
+  height: 1px;
+  margin-top: 14px;
+}
+
+.line3 {
+  border: 1px solid gray;
+  width: 78%;
+  height: 1px;
+  margin-top: 14px;
+}
+
+.line4 {
+  border: 1px solid gray;
+  width: 67%;
+  height: 1px;
+  margin-top: 14px;
+}
+
+.fa-pencil-square-o {
+  padding-top: 5px;
+}
